# vulnfix

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  static.yml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  reporter.py  scanner.py  utils.py
src/vulnfix/: __init__.py  cli.py  epss.py  models.py  report.py
src/vulnfix/analyzer/: __init__.py  fix.py  prioritizer.py  severity.py
src/vulnfix/database/: __init__.py  cves.py  patterns.py
src/vulnfix/scanner/: __init__.py  code.py  config.py  dependency.py
tests/: test_analyzer.py  test_benchmark.py  test_cli.py  test_core.py  test_database.py  test_integration.py  test_models.py  test_report.py  test_scanner_code.py  test_scanner_config.py  test_scanner_dependency.py
