[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnfix"
version = "0.1.0"
description = "AI Vulnerability Scanner - Detect OWASP Top 10 vulnerabilities, check dependencies against CVEs, and find misconfigurations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mukunda Katta" },
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
vulnfix = "vulnfix.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
